<resources>
    <string name="app_name">Narratives</string>
    <string name="narratives">NARRATIVES</string>
    <string name="menu_inferior">menu_inferior</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Amigos" />
    <string name="volver_atras">volver_atras</string>
    <string name="menu_ajustes" />
    <string name="menu_config" />
    <string name="mi_perfil" />
    <string name="ajustesAdicionales" />
    <string name="miperfil" />
    <string name="cerrar_popup" />
    <string name="nuevo">Nuevo</string>
    <string name="unirse">Unirse</string>
    <string name="crear_club">CREAR CLUB DE LECTURA</string>
    <string name="buscar_club">BUSCAR CLUB DE LECTURA</string>
    <string name="nombre_club">Nombre del club</string>
    <string name="descripcion_club">Descripción del club</string>
    <string name="ref_audiolibro">Audoiolibro de referencia</string>
    <string name="ninguno">Ninguno</string>
    <string name="missing_club_name">El nombre del club no puede quedar vacío</string>
    <string name="mis_clubes">Mis clubes de lectura</string>
    <string name="send">Enviar</string>
    <string name="type_your_message">Mensaje</string>
    <string name="opcion_eliminar">Eliminar club</string>
    <string name="opcion_unirse">Unirse al club</string>
    <string name="opcion_abandonar">Abandonar club</string>
    <string name="opcion_compartir">Compartir club</string>
</resources>